# demo-application

./: .env  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.loader  README.md  connection_to_db.py  docker-compose.yaml
Analyticity-backend/: Dockerfile  README.md  requirements.txt
Analyticity-backend/AnalyticityBackend/: db_config.py  logging_config.py  main.py
Analyticity-backend/AnalyticityBackend/constants/: queries.py  universal_constants.py
Analyticity-backend/AnalyticityBackend/helpers/: homepage_helpers.py  jams_helpers.py  logging_helpers.py  universal_helpers.py
Analyticity-backend/AnalyticityBackend/middleware/: request_logging.py
Analyticity-backend/AnalyticityBackend/models/: response_models.py
Analyticity-backend/AnalyticityBackend/routers/: alerts_endpoints.py  dashboard_endpoints.py  health_endpoints.py  (+3 more)
accidents_api/: README.md  pyproject.toml
accidents_api/bp_api/: data_loader.py  main.py
accidents_api/bp_api/models/: accidents_model.py  data_map.py  models.py  waze_model.py
accidents_api/bp_api/routers/: accidents.py  charts.py  waze.py
accidents_api/bp_api/utils/: api_client.py  filter.py  logger.py  timestamp.py
database_creation/: .env  README.md  docker-compose.yml  init.sql  init_db_central.sql  load_alerts_from_csv_to_db.py  load_jams_from_csv_to_db.py  load_nehody_from_csv_to_db.py  update_coverage_area.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
ops/: loader_entrypoint.sh  nginx-frontend.conf
(+91 files in other folders)
